force-app/main/default/objects/sf_devops__Repository__c/fields/sf_devops__GitHub_Owner__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__GitHub_Owner__c</fullName>
    <description>If the provider is &apos;GitHub&apos;, this represents the owner of the repository.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>GitHub Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>