force-app/main/default/objects/sf_devops__Repository__c/fields/sf_devops__GitHub_Repo__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__GitHub_Repo__c</fullName>
    <description>If the provider is &apos;GitHub&apos;, this represents the repository name.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>GitHub Repo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>